# TheTask

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: DataGenerator.cpp  DataGenerator.h  Includes.cpp  Includes.h  Log.cpp  Log.h  Processing.cpp  Processing.h  RecordBuffer.cpp  RecordBuffer.h
test/: Test_DataGenerator.cpp  Test_RecordBuffer.cpp  Test_sort.cpp
